--- a/zipped/project/home/project/home/orahmonna/styles.css
+++ b/zipped/project/home/project/home/orahmonna/styles.css
@@ -88,6 +88,32 @@ main {
   position: relative;
   top: -38px;
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+.weather-forecast-temp {
+  text-align: center;
+  color: #f65282;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+.weather-forecast-tempure {
+  padding: 0 10px;
+}
 
 footer {
   border-top: 1px solid #f9f7fe;
